--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div class="Aneka-Macam-Ikan">
     <img src="https://i.pinimg.com/736x/e8/ca/de/e8cade6c342a4596464ae3268fd6a2eb.jpg" alt=Menu">
     <h1>Menu Ikan</h1>
     <p>Lele Goreng(RP.12.000)</p>
